name:                observe
version:             0.1.0
synopsis:            ...
homepage:            https://github.com/iokasimov/observe
license:             BSD3
license-file:        LICENSE
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2018 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10
description:         ...

source-repository head
  type: git
  location: https://github.com/iokasimov/observe.git

library
  exposed-modules: Control.Monad.Trans.Observe
  build-depends: base == 4.*
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
